--- a/ritus-client/index-tableonly.html
+++ b/ritus-client/index-tableonly.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ritus+</title>
+    <title>Ritus+ (tableonly)</title>
   </head>
   <body>
+    Ritus+ Tableonly
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main-tableonly.jsx"></script>
   </body>
 </html>
